envs/secondAccount/alb.tf
# # log bucket
# resource "aws_s3_bucket" "alb_log" {
#   bucket = "${var.env}-alb-log-sbcntr"
# }
# resource "aws_s3_bucket_lifecycle_configuration" "alb_log" {
#   bucket = aws_s3_bucket.alb_log.id
#   rule {
#     id = "rule-1"
#     expiration {
#       days = "30"
#     }
#     status = "Enabled"
#   }
# }

# # bucket policy
# resource "aws_s3_bucket_policy" "alb_log" {
#   bucket = aws_s3_bucket.alb_log.id
#   policy = data.aws_iam_policy_document.alb_log.json
# }
# data "aws_iam_policy_document" "alb_log" {
#   statement {
#     effect    = "Allow"
#     actions   = ["s3:PutObject"]
#     resources = ["arn:aws:s3:::${aws_s3_bucket.alb_log.id}/*"]

#     principals {
#       type        = "AWS"
#       identifiers = ["582318560864"]
#     }
#   }
# }

# # ALB
# resource "aws_lb" "this" {
#   name                       = "${var.env}-alb"
#   load_balancer_type         = "application"
#   internal                   = false
#   idle_timeout               = 60
#   enable_deletion_protection = false
#   subnets = [
#     aws_subnet.public_1a.id,
#     aws_subnet.public_1c.id,
#   ]
#   access_logs {
#     bucket  = aws_s3_bucket.alb_log.id
#     enabled = true
#   }
#   security_groups = [
#     module.http_sg.security_group_id,
#     module.https_sg.security_group_id,
#   ]
# }

# # HTTP Listener
# resource "aws_lb_listener" "redirect_http_to_https" {
#   load_balancer_arn = aws_lb.this.arn
#   port              = "80"
#   protocol          = "HTTP"

#   default_action {
#     type = "redirect"

#     redirect {
#       port        = "443"
#       protocol    = "HTTPS"
#       status_code = "HTTP_301"
#     }
#   }
# }

# # HTTPS listener
# resource "aws_lb_listener" "https" {
#   depends_on        = [aws_lb.this, aws_acm_certificate_validation.this]
#   load_balancer_arn = aws_lb.this.arn
#   port              = "443"
#   protocol          = "HTTPS"
#   certificate_arn   = aws_acm_certificate.this.arn
#   ssl_policy        = "ELBSecurityPolicy-2016-08"

#   default_action {
#     type = "fixed-response"

#     fixed_response {
#       content_type = "text/plain"
#       message_body = "これは『HTTPS』です"
#       status_code  = "200"
#     }
#   }
# }
